<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Arduino2</string>
    <string name="action_settings">Settings</string>
    <string name="IP_field">Shield\'s IP address</string>
     <string name="port_field">Port</string>
    <string name="send_button">send</string>
    <string name="title_activity2">Activity2</string>
    <string name="hello_world">Hello world!</string>
    <string name="down">down</string>
    <string name="up">up</string>
    <string name="left">left</string>
    <string name="right">right</string>
   
    <string name="horn">horn</string>
    <string name="stop">Stop</string>

</resources>
