<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Activity2" >

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="92dp"
        android:onClick="moveForward"
        android:src="@drawable/arrow_up" 
         android:contentDescription="@string/up"/>

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/imageButton2"
        android:layout_below="@+id/imageButton4"
        android:layout_marginTop="20dp"
        android:onClick="moveBack"
        android:src="@drawable/arrow_down" 
       android:contentDescription="@string/down"/>
    
    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/imageButton2"
        android:layout_marginRight="14dp"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/imageButton1"
        android:onClick="moveLeft"
        android:src="@drawable/arrow_left" 
         android:contentDescription="@string/left"/>

     <ImageButton
         android:id="@+id/imageButton4"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignTop="@+id/imageButton3"
         android:layout_marginLeft="20dp"
         android:layout_toRightOf="@+id/button1"
         android:onClick="moveRight"
         android:src="@drawable/arrow_right" 
          android:contentDescription="@string/right"/>

     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_marginTop="44dp"
         android:layout_toLeftOf="@+id/imageButton4"
         android:text="" >

     </TextView>

     <Button
         android:id="@+id/stopButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageButton1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="46dp"
         android:onClick="stop"
         android:text="@string/stop" />

     <Button
         android:id="@+id/button1"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignTop="@+id/imageButton3"
         android:layout_centerHorizontal="true"
         android:text="@string/horn" />
    
</RelativeLayout>
